# api/openapi-spec/swagger.json
@@ -234,6 +234,63 @@
         }
       }
     },
+    "kruise.apps.v1alpha1.RolloutDefine": {
+      "description": "RolloutDefine is the Schema for the rolloutdefines API",
+      "type": "object",
+      "properties": {
+        "apiVersion": {
+          "description": "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources",
+          "type": "string"
+        },
+        "kind": {
+          "description": "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds",
+          "type": "string"
+        },
+        "metadata": {
+          "$ref": "#/definitions/io.k8s.apimachinery.pkg.apis.meta.v1.ObjectMeta"
+        },
+        "spec": {
+          "$ref": "#/definitions/kruise.apps.v1alpha1.RolloutDefineSpec"
+        },
+        "status": {
+          "$ref": "#/definitions/kruise.apps.v1alpha1.RolloutDefineStatus"
+        }
+      }
+    },
+    "kruise.apps.v1alpha1.RolloutDefineList": {
+      "description": "RolloutDefineList contains a list of RolloutDefine",
+      "type": "object",
+      "required": [
+        "items"
+      ],
+      "properties": {
+        "apiVersion": {
+          "description": "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources",
+          "type": "string"
+        },
+        "items": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/kruise.apps.v1alpha1.RolloutDefine"
+          }
+        },
+        "kind": {
+          "description": "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds",
+          "type": "string"
+        },
+        "metadata": {
+          "$ref": "#/definitions/io.k8s.apimachinery.pkg.apis.meta.v1.ListMeta"
+        }
+      }
+    },
+    "kruise.apps.v1alpha1.RolloutDefineSpec": {
+      "description": "RolloutDefineSpec defines the desired state of RolloutDefine",
+      "type": "object"
+    },
+    "kruise.apps.v1alpha1.RolloutDefineStatus": {
+      "description": "RolloutDefineStatus defines the observed state of RolloutDefine",
+      "type": "object"
+    },
     "kruise.apps.v1alpha1.SidecarContainer": {
       "description": "SidecarContainer defines the container of Sidecar",
       "type": "object",
